--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -54,10 +54,55 @@
       <div [@fadeInOnEnter] class="row" *ngIf="uploadTarget === 'raw'">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <div class="form-group">
-            <boolean-field [value]="processUpload" label="Generate products from raw images"
-              (valueChange)="updateProcessUpload($event)"></boolean-field>
+          <!--
+
+  <div class="form-group">
+    <boolean-field [value]="processUpload" label="Generate products from raw images"
+    (valueChange)="updateProcessUpload($event)"></boolean-field>
+  </div>
+-->
+          <table *ngIf="artifacts != null" style="width: 100%;">
+            <ng-container *ngFor="let section of sections; let i = index">
+              <thead>
+                <th>{{section.label}}</th>
+                <th>{{i === 0 ? 'Tool' : ''}}</th>
+                <th>{{i === 0 ? 'Date' : ''}}</th>
+                <th>{{i === 0 ? 'Description' : ''}}</th>
+                <th></th>
+              </thead>
+              <tr>
+                <td>{{artifacts[section.folder] != null ? artifacts[section.folder].name : ''}}</td>
+                <td>{{artifacts[section.folder] != null ? artifacts[section.folder].tool : ''}}</td>
+                <td>{{artifacts[section.folder] != null ? artifacts[section.folder].lastModified : ''}}</td>
+                <td>{{artifacts[section.folder] != null ? artifacts[section.folder].description : ''}}</td>
+                <td>
+                  <boolean-field *ngIf="section.folder === 'ptcloud'" [(value)]="processPtcloud"
+                    [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'">
+                  </boolean-field>
+                  <boolean-field *ngIf="section.folder === 'dem'" [(value)]="processDem"
+                    [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'"></boolean-field>
+                  <boolean-field *ngIf="section.folder === 'ortho'" [(value)]="processOrtho"
+                    [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'"></boolean-field>
+                </td>
+              </tr>
+            </ng-container>
+
+
+          </table>
+          <!--
+
+  <div class="form-group">
+    <boolean-field [(value)]="processPtcloud" label="Generate Point Cloud products from raw images">
+            </boolean-field>
           </div>
+          <div class="form-group">
+            <boolean-field [(value)]="processDem" label="Generate DEM products from raw images"></boolean-field>
+          </div>
+          <div class="form-group">
+            <boolean-field [(value)]="processOrtho" label="Generate Ortho products from raw images"></boolean-field>
+          </div>
+        -->
+
           <div class="form-group" *ngIf="processUpload">
             <label for="outFileName">Output Product Name Prefix</label>
             <input [(ngModel)]="values.outFileName" name="outFileName" type="input" class="form-control"
@@ -69,11 +114,30 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <div class="form-group">
-            <boolean-field [value]="processUpload" label="Make available as a product"
-              (valueChange)="updateProcessUpload($event)"></boolean-field>
+            <boolean-field [(value)]="processUpload" label="Make available as a product"></boolean-field>
           </div>
         </div>
       </div>
+      <div [@fadeInOnEnter] class="row" *ngIf="uploadTarget !== 'raw'">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <input [(ngModel)]="values.description" name="description" type="input" class="form-control"
+              placeholder="Description..." />
+          </div>
+        </div>
+      </div>
+      <div [@fadeInOnEnter] class="row" *ngIf="uploadTarget !== 'raw'">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="form-group">
+            <label for="description">Tool</label>
+            <input [(ngModel)]="values.tool" name="tool" type="input" class="form-control" placeholder="Tool..." />
+          </div>
+        </div>
+      </div>
+
     </ng-container>
 
     <div [@fadeInOnEnter] [hidden]="page.type !== 'FILE' && page.type !== 'SUMMARY'" class="row">
