--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
@@ -179,4 +179,4 @@
   </div>
 </div>
 
-<leaf-modal *ngIf="showSite" [initData]="initData"></leaf-modal>
+<collection-modal *ngIf="showSite" [initData]="initData"></collection-modal>
