--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -54,54 +54,8 @@
       <div [@fadeInOnEnter] class="row" *ngIf="uploadTarget === 'raw'">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <!--
-
-  <div class="form-group">
-    <boolean-field [value]="processUpload" label="Generate products from raw images"
-    (valueChange)="updateProcessUpload($event)"></boolean-field>
-  </div>
--->
-          <table *ngIf="artifacts != null" style="width: 100%;">
-            <ng-container *ngFor="let section of sections; let i = index">
-              <thead>
-                <th>{{section.label}}</th>
-                <th>{{i === 0 ? 'Tool' : ''}}</th>
-                <th>{{i === 0 ? 'Date' : ''}}</th>
-                <th>{{i === 0 ? 'Description' : ''}}</th>
-                <th></th>
-              </thead>
-              <tr>
-                <td>{{artifacts[section.folder] != null ? artifacts[section.folder].name : ''}}</td>
-                <td>{{artifacts[section.folder] != null ? artifacts[section.folder].tool : ''}}</td>
-                <td>{{artifacts[section.folder] != null ? artifacts[section.folder].lastModified : ''}}</td>
-                <td>{{artifacts[section.folder] != null ? artifacts[section.folder].description : ''}}</td>
-                <td>
-                  <boolean-field *ngIf="section.folder === 'ptcloud'" [(value)]="processPtcloud"
-                    [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'">
-                  </boolean-field>
-                  <boolean-field *ngIf="section.folder === 'dem'" [(value)]="processDem"
-                    [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'"></boolean-field>
-                  <boolean-field *ngIf="section.folder === 'ortho'" [(value)]="processOrtho"
-                    [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'"></boolean-field>
-                </td>
-              </tr>
-            </ng-container>
-
-
-          </table>
-          <!--
-
-  <div class="form-group">
-    <boolean-field [(value)]="processPtcloud" label="Generate Point Cloud products from raw images">
-            </boolean-field>
-          </div>
-          <div class="form-group">
-            <boolean-field [(value)]="processDem" label="Generate DEM products from raw images"></boolean-field>
-          </div>
-          <div class="form-group">
-            <boolean-field [(value)]="processOrtho" label="Generate Ortho products from raw images"></boolean-field>
-          </div>
-        -->
+          <artifact-page *ngIf="component != null" [edit]="true" [entity]="component" [(processOrtho)]="processOrtho"
+            [(processDem)]="processDem" [(processPtcloud)]="processPtcloud" (onError)="error($event)"></artifact-page>
 
           <div class="form-group" *ngIf="processUpload">
             <label for="outFileName">Output Product Name Prefix</label>
