--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
@@ -214,7 +214,7 @@
           <div *ngIf="showOrthoRerunMessage" style="text-align:right;padding-right:20px;">
             <p>{{statusMessage}}</p>
             <p>See this process on
-              <a routerlink="/site/tasks" routerlinkactive="active" href="#/site/tasks">your tasks page</a>
+              <a routerlink="/site/tasks" routerlinkactive="active">your tasks page</a>
             </p>
           </div>
 
@@ -231,14 +231,13 @@
               </div>
               <div class="col-md-8" style="text-align: right;">
                 <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-<!--
-
-  <button *ngIf="processable" type="button" class="btn btn-secondary"
-  title="Downloads all files in the {{folder.name}} folder." [disabled]="processRunning"
-  (click)="handleDownload()" style="margin-left: 5px;">
-  Download All {{capitalize(folder.name)}}
-</button>
--->                
+                
+                <button *ngIf="processable" type="button" class="btn btn-secondary"
+                  title="Downloads all files" [disabled]="processRunning"
+                  (click)="handleDownload()" style="margin-left: 5px;">
+                  Download All
+                </button>
+                
                 <button *ngIf="processable" type="button" class="btn btn-secondary" [disabled]="processRunning"
                   (click)="handleDownloadOdmAll()" title="Downloads the all.zip file generated from ODM."
                   style="margin-left: 5px;">
