Better clean up handling when deleting artifacts which have other downstream files in other folders: Hillshade for DEM and POTREE for pointcloud.
Updated some labels

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
@@ -200,7 +200,7 @@
                 </ul>
               </div>
             </tab>
-            <tab heading="artifacts" (selectTab)="onSelect('artifacts')">
+            <tab heading="products" (selectTab)="onSelect('artifacts')">
               <artifact-page *ngIf="tabName === 'artifacts'" [entity]="entity" [processRunning]="processRunning" (onError)="error($event)"></artifact-page>
             </tab>
           </tabset>
