--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/artifact-page.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/artifact-page.component.html
@@ -24,14 +24,12 @@
           </button>
         </td>
         <td *ngIf="edit">
-          <boolean-field *ngIf="section.folder === 'ptcloud'" [value]="processPtcloud"
-            (valueChange)="handlePtcloudChange($event)"
+          <boolean-field *ngIf="section.folder === 'ptcloud'" [(value)]="config.processPtcloud"
             [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'">
           </boolean-field>
-          <boolean-field *ngIf="section.folder === 'dem'" [value]="processDem" (valueChange)="handleDemChange($event)"
+          <boolean-field *ngIf="section.folder === 'dem'" [(value)]="config.processDem"
             [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'"></boolean-field>
-          <boolean-field *ngIf="section.folder === 'ortho'" [value]="processOrtho"
-            (valueChange)="handleOrthoChange($event)"
+          <boolean-field *ngIf="section.folder === 'ortho'" [(value)]="config.processOrtho"
             [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'"></boolean-field>
         </td>
 
