--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
@@ -214,7 +214,7 @@
           <div *ngIf="showOrthoRerunMessage" style="text-align:right;padding-right:20px;">
             <p>{{statusMessage}}</p>
             <p>See this process on
-              <a routerlink="/site/tasks" routerlinkactive="active">your tasks page</a>
+              <a routerLink="/site/tasks">your tasks page</a>
             </p>
           </div>
 
