--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -267,7 +267,7 @@
             Cancel Upload
           </button>
 
-          <button type="button" [disabled]="disabled" (click)="close()" [disabled]="disabled" class="btn btn-default"
+          <button type="button" (click)="close()" [disabled]="disabled" class="btn btn-default"
             role="button" aria-disabled="false" style="padding: 4px 18px;">
             <span class="ui-button-text">Close</span>
           </button>
