small style changes

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/run-ortho-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/run-ortho-modal.component.html
@@ -20,7 +20,7 @@
         <div class="btn-holder" style="text-align: right;">
             <button type="button" (click)="bsModalRef.hide()" class="btn btn-default" role="button"
                 aria-disabled="false" style="padding: 4px 18px;">Cancel</button>
-            <button type="button" (click)="confirm()" class="btn-primary" class="btn" role="button"
+            <button type="button" (click)="confirm()" class="btn btn-primary" role="button"
                 aria-disabled="false" style="padding: 4px 18px;">Submit</button>
         </div>
     </div>
